--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +16,10 @@
 <body>
     <!-- Menú -->
     <header class="cabecera">
-        <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
-        <h1 class="cabecera__titulo">Alura Latam</h1>
+        <div class="cabecera__logo__nombre">
+            <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
+            <h1 class="cabecera__titulo">Liliana Muñoz</h1>
+        </div>
         <nav class="navegacion">
             <ul class="navegacion__lista">
                 <li class="navegacion__elemento"><a href="#sobre-mi">Sobre mí</a></li>
@@ -24,41 +27,60 @@
                 <li class="navegacion__elemento"><a href="#aficiones">Aficiones</a></li>
                 <li class="navegacion__elemento"><a href="#formacion">Formación</a></li>
                 <li class="navegacion__elemento"><a href="#proyectos">Proyectos</a></li>
-                <li class="navegacion__elemento"><a href="#contacto">Contacto</a></li>
             </ul>
+            <li class="navegacion__elemento"><a href="#contacto">mlilianatorres2@gmail.com</a></li>
         </nav>
     </header>
 
     <!-- Sección de Presentación -->
     <section class="presentacion">
-        <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
-        <div class="presentacion__contenedor">
-            <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
-            <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
-            <ul class="redes">
-                <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
-            </ul>
+        <div class="presentacion__contenedor__general">
+            <img class="presentacion__foto" src="assets/photoprofile.png" alt="Foto de perfil">
+            <div class="presentacion__contenedor">
+                <h2 class="presentacion__titulo">¡Hola! Soy Liliana Muñoz y apasionada por la tecnología</h2>
+                <p class="presentacion__subtitulo">Soy colombiana, tengo 35 años y soy tecnóloga en electrónica
+                    especializada en programación y desarrollo front-end. Durante un año y medio trabajé como freelance
+                    utilizando Flutter. Actualmente, me capacito en Alura para perfeccionar mis habilidades y encontrar
+                    estabilidad laboral. También soy apasionada por el fútbol y entreno como portera.</p>
+                <ul class="redes">
+                    <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
+                    <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
+                    <li class="redes__img"><a href="">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
+                    <li class="redes__img" id="curriculo"><a href="">Currículo  <img src="assets/arrow.png" alt="Flecha"></a></li>
+                </ul>
+            </div>
         </div>
     </section>
 
     <!-- Sección sobre mí -->
-    <section class="sobre-mi" id="sobre-mi">
-        <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
-        <!-- Firma opcional -->
-        <img class="sobre-mi__firma" src="assets/signature.png" alt="Firma">
+    <section class="sobre-mi__general" id="sobre-mi">
+        <div class="sobre-mi">
+            <h2 class="sobre-mi__titulo">Sobre mí</h2>
+            <p class="sobre-mi__texto">Soy tecnóloga en Electrónica, egresada de la Universidad del Quindío, con
+                experiencia
+                en el desarrollo de aplicaciones móviles utilizando frameworks como Flutter. Además, he adquirido
+                conocimientos básicos en QA testing a través de cursos online. Me considero una persona responsable,
+                organizada y con gran facilidad para trabajar en equipo. También destaco por mis habilidades
+                interpersonales
+                y mi constante disposición para aprender y actualizarme en mi área profesional.</p>
+            <p class="sobre-mi__texto">En mi tiempo libre disfruto jugar fútbol, donde entreno como portera, y explorar
+                mi
+                lado creativo con las manualidades, especialmente elaborando muñecos navideños. También soy apasionada
+                por
+                el anime y las películas de terror, que alimentan mi imaginación y me inspiran. ¡Siempre estoy buscando
+                nuevas formas de disfrutar la vida!
+            </p>
+            <!-- Firma opcional -->
+            <img class="sobre-mi__firma" src="assets/signaturepersonal.png" alt="Firma">
+        </div>
     </section>
 
     <!-- Sección de Habilidades -->
     <section class="habilidades" id="habilidades">
-        <h2 class="habilidades__titulo">Habilidades</h2>
+        <h2 class="titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/html.png" alt="HTML">
+                <img class="habilidades__icono" src="assets/html_icon.png" alt="HTML">
                 <p class="habilidades__nombre">HTML 5</p>
             </li>
             <li class="habilidades__elemento">
@@ -68,104 +90,140 @@
             <li class="habilidades__elemento">
                 <img class="habilidades__icono" src="assets/php_icon.png" alt="PHP">
                 <p class="habilidades__nombre">PHP</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/nodejs_icon.png" alt="Node.js">
-                <p class="habilidades__nombre">Node.js</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/react_icon.png" alt="React">
-                <p class="habilidades__nombre">React</p>
-            </li>
             <li class="habilidades__elemento">
                 <img class="habilidades__icono" src="assets/css_icon.png" alt="CSS">
                 <p class="habilidades__nombre">CSS</p>
+            </li>
+            <li class="habilidades__elemento">
+                <img class="habilidades__icono" src="assets/postman_icon.png" alt="Postman">
+                <p class="habilidades__nombre">Postman</p>
+            </li>
+            <li class="habilidades__elemento">
+                <img class="habilidades__icono" src="assets/flutter_icon.png" alt="Flutter">
+                <p class="habilidades__nombre">Flutter</p>
             </li>
         </ul>
     </section>
 
     <!-- Sección de Aficiones -->
     <section class="aficiones" id="aficiones">
-        <h2 class="aficiones__titulo">Aficiones</h2>
+        <h2 class="titulo">Aficiones</h2>
         <ul class="aficiones__lista">
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/skate_icon.png" alt="Patinaje">
-                <p class="aficiones__nombre">Patinaje</p>
+                <img class="aficiones__icono" src="assets/futbol_icon.png" alt="Jugar futbol">
+                <p class="aficiones__nombre">Jugar Fútbol</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/guitar_icon.png" alt="Tocar bajo">
-                <p class="aficiones__nombre">Tocar bajo</p>
+                <img class="aficiones__icono" src="assets/bolos_icon.png" alt="Jugar bolos">
+                <p class="aficiones__nombre">Jugar Bolos</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/headphones_icon.png" alt="Oír música">
-                <p class="aficiones__nombre">Oír música</p>
+                <img class="aficiones__icono" src="assets/musica_icon.png" alt="Escuchar música">
+                <p class="aficiones__nombre">Escuchar música</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/tv_icon.png" alt="Ver series">
-                <p class="aficiones__nombre">Ver series</p>
+                <img class="aficiones__icono" src="assets/televisor_icon.png" alt="Ver series">
+                <p class="aficiones__nombre">Ver series y películas</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/forkspoon_icon.png" alt="Cocinar">
-                <p class="aficiones__nombre">Cocinar</p>
+                <img class="aficiones__icono" src="assets/manualidades_icon.png" alt="Hacer manualidades">
+                <p class="aficiones__nombre">Hacer manualidades</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/camera_icon.png" alt="Tomar fotos">
-                <p class="aficiones__nombre">Tomar fotos</p>
+                <img class="aficiones__icono" src="assets/leer_icon.png" alt="Leer">
+                <p class="aficiones__nombre">Leer</p>
             </li>
         </ul>
     </section>
 
     <!-- Sección de Formación académica -->
     <section class="formacion" id="formacion">
-        <h2 class="formacion__titulo">Formación académica</h2>
+        <h2 class="titulo">Formación académica</h2>
         <ul class="formacion__lista">
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/ufpr_logo.png" alt="UFPR">
+                <div class="formacion__contenedor__icono">
+                    <img class="formacion__icono" src="assets/logo_uniquindio.png" alt="Universidad del Quindío">
+                </div>
                 <div>
-                    <h3 class="formacion__nombre">Análisis de datos</h3>
-                    <p class="formacion__detalle">2018 - UFPR</p>
+                    <h3 class="formacion__nombre">Tecnóloga en Electrónica</h3>
+                    <p class="formacion__detalle">2013 - Universidad del Quindío</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
+                <div class="formacion__contenedor__icono">
+                    <img class="formacion__icono" src="assets/logo_sena.png" alt="SENA">
+                </div>
                 <div>
-                    <h3 class="formacion__nombre">Formación en UX Design</h3>
-                    <p class="formacion__detalle">2019 - Alura</p>
+                    <h3 class="formacion__nombre">Tecnologia en Mantenimiento e Instrumental Industrial</h3>
+                    <p class="formacion__detalle">2015 - Servicio Nacional de Aprendizaje - SENA</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/ufrj_logo.png" alt="UFRJ">
+                <div class="formacion__contenedor__icono">
+                    <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
+                </div>
                 <div>
-                    <h3 class="formacion__nombre">Posgrado en diseño</h3>
-                    <p class="formacion__detalle">En curso - UFRJ</p>
+                    <h3 class="formacion__nombre">Front End G7 - ONE</h3>
+                    <p class="formacion__detalle">2024 - Alura</p>
                 </div>
             </li>
         </ul>
+        </div>
     </section>
 
     <!-- Sección de Proyectos -->
     <section class="proyectos" id="proyectos">
-        <h2 class="proyectos__titulo">Experiencia Profesional</h2>
+        <h2 class="titulo">Experiencia Profesional</h2>
         <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
-        </div>
-        <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+            <img class="proyectos__secretcode" src="assets/secretcode_print.png" alt="Codigo secreto">
+            <div class="proyectos__contenedor__descripcion">
+                <h3 class="proyectos__nombre">Encriptador de texto</h3>
+                <p class="proyectos__descripcion">El encriptador y desencriptador de texto es un proyecto desarrollado
+                    como
+                    entrega final del primer módulo del programa de formación de Alura Latam. Este proyecto utiliza
+                    JavaScript, HTML y CSS para implementar una aplicación interactiva y funcional. Su principal
+                    objetivo es
+                    permitir al usuario transformar mensajes de texto mediante un sencillo proceso de encriptación y
+                    desencriptación.</p>
+                <button class="boton_respositorio" onclick="">Repositório</button>
+                <button class="boton_ver_demo" onclick="">Ver demo</button>
+            </div>
         </div>
     </section>
 
     <!-- Sección de Contacto -->
     <section class="contacto" id="contacto">
-        <h2 class="contacto__titulo">Contacto</h2>
-        <form class="contacto__formulario">
-            <input class="contacto__campo" type="text" placeholder="Nombre">
-            <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
-            <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"></textarea>
-            <button class="contacto__boton" type="submit">Enviar</button>
-        </form>
+        <img class="contacto__imagen" src="assets/contact_image.png" alt="Imagen de contacto">
+        <div class="contacto__container__formulario">
+            <h2 class="titulo">Contacto</h2>
+            <p class="contacto__parrafo">¿Quieres contactarme?</p>
+            <p class="contacto__parrafo">Complete el siguiente formulario y me pondré en contacto con usted lo antes
+                posible.</p>
+            <form class="contacto__formulario" id="contacto__formulario">
+                <input class="contacto__campo" type="text" placeholder="Nombre" id="name">
+                <p id="errorMessageName" style="color: red; display: none;margin: 0"></p>
+                <input class="contacto__campo" type="email" placeholder="Correo Electrónico" id="email">
+                <p id="errorMessageEmail" style="color: red; display: none;margin: 0"></p>
+                <input class="contacto__campo" type="asunto" placeholder="Asunto" id="subject">
+                <p id="errorMessageSubject" style="color: red; display: none;margin: 0"></p>
+                <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"
+                id="message" onchange=""></textarea>
+                <p id="errorMessageMessage" style="color: red; display: none;margin: 0"></p>
+                <button class="enviar_msn" id="btn_enviar_msn" type="submit" onclick="validarFormulario()" >Enviar
+                    Mensaje</button>
+            </form>
+        </div>
     </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer_style">
+            <img src="/assets/icon_eyes.png" alt="Icono de ojos" class="icon_eyes">
+            <h3 class="footer_text_style">Developed by Lili</h3>
+
+        </div>
+    </footer>
 </body>
-    <script src="script.js"></script>
+<script src="script.js"></script>
+
 </html>
